@@ -74,6 +74,8 @@ Other Changes
 
 * The concept of checker priority has been removed.
 
+* ``BaseChecker`` classes now require the ``linter`` argument to be passed.
+
 * The ``set_config_directly`` decorator has been removed.
 
 * The ``ignore-mixin-members`` option has been deprecated. You should now use the new
