@@ -10,6 +10,7 @@ from typing import Dict, ValuesView
 import pytest
 
 from pylint.checkers import BaseChecker
+from pylint.lint.pylinter import PyLinter
 from pylint.message import MessageDefinition, MessageDefinitionStore, MessageIdStore
 
 
@@ -33,6 +34,9 @@ def store() -> MessageDefinitionStore:
     store_ = MessageDefinitionStore()
 
     class Checker(BaseChecker):
+        def __init__(self) -> None:
+            super().__init__(PyLinter())
+
         name = "achecker"
         msgs = {
             "W1234": (
