@@ -10,6 +10,7 @@ from pytest import CaptureFixture
 
 from pylint.checkers import BaseChecker
 from pylint.exceptions import InvalidMessageError, UnknownMessageError
+from pylint.lint.pylinter import PyLinter
 from pylint.message import MessageDefinition
 from pylint.message.message_definition_store import MessageDefinitionStore
 
@@ -121,6 +122,9 @@ from pylint.message.message_definition_store import MessageDefinitionStore
 )
 def test_register_error(empty_store, messages, expected):
     class Checker(BaseChecker):
+        def __init__(self) -> None:
+            super().__init__(PyLinter())
+
         name = "checker"
         msgs = messages
 
@@ -133,10 +137,16 @@ def test_register_error_new_id_duplicate_of_new(
     empty_store: MessageDefinitionStore,
 ) -> None:
     class CheckerOne(BaseChecker):
+        def __init__(self) -> None:
+            super().__init__(PyLinter())
+
         name = "checker_one"
         msgs = {"W1234": ("message one", "msg-symbol-one", "msg description.")}
 
     class CheckerTwo(BaseChecker):
+        def __init__(self) -> None:
+            super().__init__(PyLinter())
+
         name = "checker_two"
         msgs = {"W1234": ("message two", "msg-symbol-two", "another msg description.")}
 
@@ -247,6 +257,9 @@ def test_multiple_child_of_old_name(store: MessageDefinitionStore) -> None:
     """We can define multiple name with the same old name."""
 
     class FamillyChecker(BaseChecker):
+        def __init__(self) -> None:
+            super().__init__(PyLinter())
+
         name = "famillychecker"
         msgs = {
             "W1235": (
